# dipot

./: CMakeLists.txt  README.md  dipot.cpp  driver.h
bricks/: brick-types
format/: cformat.cpp  cformat.h
ui/: automat.cpp  cli.cpp  cli.h  die.h  driver.h
